# Boksor

./: .gitignore  .gitmodules  CMakeLists.txt  Main.cpp
res/: fragment.glsl
src/: Main.cpp  Renderer.h  Shader.cpp  Shader.h  Window.cpp  Window.h
